<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ge.predix.solsvc</groupId>
	<artifactId>rabbitmq-producer-template</artifactId>
	<version>1.0.5</version>

	<properties>
		<maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
		<springboot.version>1.2.3.RELEASE</springboot.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<java.version>1.8</java.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
		<ext-model.version>2.0.6</ext-model.version>
		<ext-interface.version>2.0.6</ext-interface.version>
		<ext-util.version>2.0.6</ext-util.version>
	</properties>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.2.3.RELEASE</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
			<version>${springboot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-oxm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-interface</artifactId>
			<version>${ext-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-model</artifactId>
			<version>${ext-model.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-util</artifactId>
			<version>${ext-util.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>testharness</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${maven-surefire-plugin.version}</version>
						<dependencies>
							<dependency>
								<groupId>org.apache.maven.surefire</groupId>
								<artifactId>surefire-junit4</artifactId>
								<version>${maven-surefire-plugin.version}</version>
							</dependency>
						</dependencies>
						<configuration>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>
								<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version><!--$NO-MVN-MAN-VER$ -->
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<systemProperties>
					</systemProperties>
				</configuration>
				<executions>
					<execution>
						<id>run-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.2</version>
			</plugin>
		</plugins>
	</build>

</project>
